@@ -50,6 +50,7 @@ import org.apache.velocity.tools.generic.ComparisonDateTool;
 import org.apache.velocity.tools.generic.DisplayTool;
 import org.apache.velocity.tools.generic.EscapeTool;
 import org.apache.velocity.tools.generic.ListTool;
+import org.apache.velocity.tools.generic.LocaleConfig;
 import org.apache.velocity.tools.generic.MathTool;
 import org.apache.velocity.tools.generic.NumberTool;
 import org.apache.velocity.tools.generic.ResourceTool;
@@ -194,17 +195,33 @@ public class VelocityResponseWriter implements QueryResponseWriter, SolrCoreAwar
     VelocityContext context = new VelocityContext();
 
     // Register useful Velocity "tools"
+    String locale = request.getParams().get(LOCALE);
+    Map toolConfig = new HashMap();
+    toolConfig.put("locale", locale);
+
+
     context.put("log", log);   // TODO: add test; TODO: should this be overridable with a custom "log" named tool?
     context.put("esc", new EscapeTool());
     context.put("date", new ComparisonDateTool());
     context.put("list", new ListTool());
-    context.put("math", new MathTool());
-    context.put("number", new NumberTool());
     context.put("sort", new SortTool());
-    context.put("display", new DisplayTool());
-    context.put("resource", new SolrVelocityResourceTool(
-        request.getCore().getSolrConfig().getResourceLoader().getClassLoader(),
-        request.getParams().get(LOCALE)));
+
+    MathTool mathTool = new MathTool();
+    mathTool.configure(toolConfig);
+    context.put("math", mathTool);
+
+    NumberTool numberTool = new NumberTool();
+    numberTool.configure(toolConfig);
+    context.put("number", numberTool);
+
+
+    DisplayTool displayTool = new DisplayTool();
+    displayTool.configure(toolConfig);
+    context.put("display", displayTool);
+
+    ResourceTool resourceTool = new SolrVelocityResourceTool(request.getCore().getSolrConfig().getResourceLoader().getClassLoader());
+    resourceTool.configure(toolConfig);
+    context.put("resource", resourceTool);
 
 /*
     // Custom tools, specified in config as:
@@ -213,12 +230,14 @@ public class VelocityResponseWriter implements QueryResponseWriter, SolrCoreAwar
             <str name="mytool">com.example.solr.velocity.MyTool</str>
           </lst>
         </queryResponseWriter>
-
-
 */
     // Custom tools can override any of the built-in tools provided above, by registering one with the same name
     for(String name : customTools.keySet()) {
-      context.put(name, SolrCore.createInstance(customTools.get(name), Object.class, "VrW custom tool", request.getCore(), request.getCore().getResourceLoader()));
+      Object customTool = SolrCore.createInstance(customTools.get(name), Object.class, "VrW custom tool: " + name, request.getCore(), request.getCore().getResourceLoader());
+      if (customTool instanceof LocaleConfig) {
+        ((LocaleConfig)customTool).configure(toolConfig);
+      }
+      context.put(name, customTool);
     }
 
     // custom tools _cannot_ override context objects added below, like $request and $response
@@ -359,10 +378,8 @@ public class VelocityResponseWriter implements QueryResponseWriter, SolrCoreAwar
 
     private ClassLoader solrClassLoader;
 
-    public SolrVelocityResourceTool(ClassLoader cl, String localeString) {
+    public SolrVelocityResourceTool(ClassLoader cl) {
       this.solrClassLoader = cl;
-      Locale l = toLocale(localeString);
-      this.setLocale(l == null ? Locale.ROOT : l);
     }
 
     @Override
